--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
+    "gulp-cached": "^1.1.1",
     "gulp-hash-src": "^0.1.6",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.1.0",
